blue-green-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-green-service
  namespace: lessons
spec:
  selector:
    app: blue-green
  ports:
    - protocol: TCP
      port: 4565
      targetPort: 4565
